# Factora

./: .gitignore  README.md  eslint.config.mjs  fix-classes.js  package-lock.json  package.json  prisma.config.ts  replace-theme.js  vitest.config.ts
.github/workflows/: ci.yml
contracts/admin-registry/: Cargo.toml
contracts/admin-registry/src/: lib.rs  test.rs
contracts/invoice-factoring/: Cargo.toml
contracts/invoice-factoring/src/: lib.rs  storage.rs  test.rs
contracts/invoice-factoring/test_snapshots/test/: test_cancel_invoice.1.json  test_invoice_lifecycle.1.json
prisma/: schema.prisma
scripts/: deploy.js  git-commit-all.ps1  git-commit-level3.ps1
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/analytics/: page.tsx
src/app/api/activity/: route.ts
src/app/api/investments/: route.ts
src/app/api/invoices/: route.ts
src/app/api/invoices/[id]/: route.ts
src/app/api/stats/: route.ts
src/app/api/users/: route.ts
src/app/dashboard/: page.tsx
src/app/invoices/: page.tsx
src/app/invoices/[id]/: page.tsx
src/app/invoices/create/: page.tsx
src/app/portfolio/: page.tsx
src/app/settings/: page.tsx
src/components/: activity-feed.tsx  dashboard-metrics.tsx  footer.tsx  invoice-card.test.tsx  invoice-card.tsx  navbar.tsx  providers.tsx
src/context/: wallet-context.tsx
src/hooks/: use-stellar-wallet.ts
src/lib/: db.ts  mock-db-store.ts  stellar.ts
