[package]
name = "invoice_factoring"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"
ed25519-dalek = "=2.0.0"
curve25519-dalek = "=4.1.1"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
ed25519-dalek = "=2.0.0"
curve25519-dalek = "=4.1.1"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
